testsuite/tests/deriving/should_fail/Roles7.hs
{-# LANGUAGE RoleAnnotations #-}

module Roles7 where

bar :: Int@P -> Int
bar = id